# nonebot-plugin-gocqhttp-cross-machine-upload-file

./: README.md  pyproject.toml
src/nonebot_plugin_gocqhttp_cross_machine_upload_file/: __init__.py  config.py  errors.py  file_manager.py
